--- a/index.html
+++ b/index.html
@@ -814,8 +814,7 @@
                 <a href="mailto:marylene@mmtfininsurance.com">marylene@mmtfininsurance.com</a>
             </p>
             <p style="font-size: 0.85em; margin-top: 10px;">
-                NY Licenses: LA-1010090 & LA-1298496 | Licensed NY/NJ/AZ | 
-                <a href="https://www.nyc.gov/site/dca/consumers/verify-a-licensee.page" target="_blank">Verify Licenses</a>
+                NY Licenses: LA-1010090 & LA-1298496 | Licensed NY/NJ/AZ | Nationwide Appointments Pending
             </p>
         </div>
 
