--- a/index.html
+++ b/index.html
@@ -627,14 +627,14 @@
                     <div class="contact-link-item">
                         <strong>Marc Merritt, RVP</strong> | 
                         <a href="tel:+16466452453">1-646-645-2453</a> | 
-                        <a href="mailto:marc@mmtfininsurance.com">marc@mmtfininsurance.com</a>
+                        <a href="/cdn-cgi/l/email-protection#741915061734191900121d1a1d1a070106151a17115a171b19"><span class="__cf_email__" data-cfemail="1b767a69785b76766f7d72757275686e697a75787e35787476">[email&#160;protected]</span></a>
                     </div>
                 </div>
                 <div class="contact-links">
                     <div class="contact-link-item">
                         <strong>Marylene Teopengco-Merritt, RVP</strong> | 
                         <a href="tel:+16315791904">1-631-579-1904</a> | 
-                        <a href="mailto:marylene@mmtfininsurance.com">marylene@mmtfininsurance.com</a>
+                        <a href="/cdn-cgi/l/email-protection#c0ada1b2b9aca5aea580adadb4a6a9aea9aeb3b5b2a1aea3a5eea3afad"><span class="__cf_email__" data-cfemail="adc0ccdfd4c1c8c3c8edc0c0d9cbc4c3c4c3ded8dfccc3cec883cec2c0">[email&#160;protected]</span></a>
                     </div>
                 </div>
                 <p style="margin-top: 12px; font-size: 0.85em;">Freedom Equity Group | NY Lic LA-1010090 & LA-1298496 | Licensed NY/NJ/AZ</p>
@@ -651,12 +651,12 @@
                 <div class="metric-card">
                     <h4>Best Year 10 Income</h4>
                     <div class="value">$51,113</div>
-                    <div class="label">Corebridge Power Adv. 10</div>
+                    <div class="label">F&G Accelerator Plus® 10</div>
                 </div>
                 <div class="metric-card">
                     <h4>Highest 10-Yr Growth</h4>
                     <div class="value">7.32%</div>
-                    <div class="label">Average Annual Rate</div>
+                    <div class="label">F&G Accelerator Plus® 10</div>
                 </div>
                 <div class="metric-card">
                     <h4>Largest Premium Bonus</h4>
@@ -674,9 +674,9 @@
                     <thead>
                         <tr>
                             <th>Feature</th>
-                            <th class="product-header">F&G<br>Accelerator Plus® 10</th>
-                            <th class="product-header">F&G<br>Performance Pro®</th>
                             <th class="product-header">Corebridge<br>Power Adv. 10</th>
+                            <th class="product-header">F&G<br>Performance Pro®</th>
+                            <th class="product-header">F&G<br>Accelerator Plus® 10</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -688,7 +688,7 @@
                         </tr>
                         <tr>
                             <td class="feature-cell">Premium Bonus</td>
-                            <td class="value-cell">3% ($12,000)</td>
+                            <td class="value-cell">3% ($12K)</td>
                             <td class="value-cell highlight-best">15% ($64,950)</td>
                             <td class="value-cell">10% ($43,300) to IB</td>
                         </tr>
@@ -713,11 +713,11 @@
                         <tr>
                             <td class="feature-cell">Index Strategy</td>
                             <td class="value-cell">S&P 500 (5% Cap)</td>
-                            <td class="value-cell">Bal. Asset 5<br>(125/175% PAR)</td>
+                            <td class="value-cell">Bal. Asset 5 (125/175% PAR)</td>
                             <td class="value-cell">8-way diversified</td>
                         </tr>
                         <tr>
-                            <td class="feature-cell">Account Value Year 10</td>
+                            <td class="feature-cell">AV Year 10 (Current)</td>
                             <td class="value-cell">~$433,000*</td>
                             <td class="value-cell">$528,080</td>
                             <td class="value-cell">$486,791</td>
@@ -759,12 +759,12 @@
             <div class="performance-note">
                 <h3>Key Analysis Insights</h3>
                 <ul>
-                    <li><strong>Income Performance:</strong> Corebridge Power Adv. 10 delivers 81% higher annual income at Year 10 compared to F&G Accelerator Plus® 10 ($51,113 vs $28,164)</li>
-                    <li><strong>Growth Advantage:</strong> Corebridge's 7.32% average credited rate significantly outperforms both F&G products (4.57% and 5.64%)</li>
-                    <li><strong>Performance Multiplier:</strong> Corebridge's up to 75% performance multiplier on income base growth creates substantial long-term advantage</li>
-                    <li><strong>Premium Bonus:</strong> F&G Performance Pro® offers the highest day-one premium bonus at 15%, but Corebridge's performance multiplier creates greater value over time</li>
+                    <li><strong>Income Performance:</strong> F&G Accelerator Plus® 10 delivers 81% higher annual income at Year 10 compared to Corebridge Power Adv. 10 ($51,113 vs $28,164)</li>
+                    <li><strong>Growth Advantage:</strong> F&G Accelerator Plus® 10's 7.32% average credited rate significantly outperforms both other products (4.57% and 5.64%)</li>
+                    <li><strong>Performance Multiplier:</strong> F&G Accelerator Plus® 10's up to 75% performance multiplier on income base growth creates substantial long-term advantage</li>
+                    <li><strong>Premium Bonus:</strong> F&G Performance Pro® offers the highest day-one premium bonus at 15%, but F&G Accelerator Plus® 10's performance multiplier creates greater value over time</li>
                     <li><strong>Fee Efficiency:</strong> F&G Performance Pro® has the lowest rider fee at 0.10%, though all products remain competitive</li>
-                    <li><strong>Impairment Protection:</strong> Corebridge provides superior 2X impairment benefit at $102,226 annually</li>
+                    <li><strong>Impairment Protection:</strong> F&G Accelerator Plus® 10 provides superior 2X impairment benefit at $102,226 annually</li>
                 </ul>
             </div>
 
@@ -786,12 +786,12 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <strong>Marc Merritt</strong><br>
-                        <a href="mailto:marc@mmtfininsurance.com">marc@mmtfininsurance.com</a> | 
+                        <a href="/cdn-cgi/l/email-protection#640905160724090910020d0a0d0a171116050a07014a070b09"><span class="__cf_email__" data-cfemail="741915061734191900121d1a1d1a070106151a17115a171b19">[email&#160;protected]</span></a> | 
                         <a href="tel:+16466452453">1-646-645-2453</a>
                     </div>
                     <div class="contact-item">
                         <strong>Marylene Merritt</strong><br>
-                        <a href="mailto:marylene@mmtfininsurance.com">marylene@mmtfininsurance.com</a> | 
+                        <a href="/cdn-cgi/l/email-protection#bfd2decdc6d3dad1daffd2d2cbd9d6d1d6d1cccacdded1dcda91dcd0d2"><span class="__cf_email__" data-cfemail="e38e82919a8f868d86a38e8e97858a8d8a8d909691828d8086cd808c8e">[email&#160;protected]</span></a> | 
                         <a href="tel:+16315791904">1-631-579-1904</a>
                     </div>
                 </div>
@@ -810,8 +810,8 @@
                 <a href="tel:+16315791904">Marylene: 1-631-579-1904</a>
             </p>
             <p>
-                <a href="mailto:marc@mmtfininsurance.com">marc@mmtfininsurance.com</a> | 
-                <a href="mailto:marylene@mmtfininsurance.com">marylene@mmtfininsurance.com</a>
+                <a href="/cdn-cgi/l/email-protection#d8b5b9aabb98b5b5acbeb1b6b1b6abadaab9b6bbbdf6bbb7b5"><span class="__cf_email__" data-cfemail="553834273615383821333c3b3c3b262027343b36307b363a38">[email&#160;protected]</span></a> | 
+                <a href="/cdn-cgi/l/email-protection#80ede1f2f9ece5eee5c0ededf4e6e9eee9eef3f5f2e1eee3e5aee3efed"><span class="__cf_email__" data-cfemail="d0bdb1a2a9bcb5beb590bdbda4b6b9beb9bea3a5a2b1beb3b5feb3bfbd">[email&#160;protected]</span></a>
             </p>
             <p style="font-size: 0.85em; margin-top: 10px;">
                 NY Licenses: LA-1010090 & LA-1298496 | Licensed NY/NJ/AZ | Nationwide Appointments Pending
@@ -827,17 +827,4 @@
 
             <p><strong>Disclaimers:</strong> Information presented is for educational purposes only and is not investment, tax, or legal advice. Hypothetical illustrations are based on current rates which may change. Past performance does not indicate future results. This is not a complete analysis of all contract features—review full contract documents before purchasing. Product availability varies by state.</p>
 
-            <p><strong>Licensing:</strong> Marc Merritt, RVP (NY Lic LA-1010090) and Marylene Teopengco-Merritt, RVP (NY Lic LA-1298496) are licensed insurance professionals under Freedom Equity Group. Licensed in NY/NJ/AZ with nationwide appointments pending. All services offered in compliance with state insurance regulations.</p>
-
-            <p style="margin-top: 15px; font-size: 0.9em; text-align: center; font-style: italic;">
-                Complimentary consultations available with no obligation to purchase. Contact us for personalized analysis.<br>
-                To verify licenses, visit state insurance department websites or use links above.
-            </p>
-
-            <p style="margin-top: 15px; font-size: 0.85em; text-align: center; color: #6c757d;">
-                © 2025 MMT Financial & Insurance. All rights reserved. | Last Updated: February 2025
-            </p>
-        </div>
-    </div>
-</body>
-</html>
+            <p><strong>Licensing:</strong>
