--- a/index.html
+++ b/index.html
@@ -627,14 +627,14 @@
                     <div class="contact-link-item">
                         <strong>Marc Merritt, RVP</strong> | 
                         <a href="tel:+16466452453">1-646-645-2453</a> | 
-                        <a href="/cdn-cgi/l/email-protection#741915061734191900121d1a1d1a070106151a17115a171b19"><span class="__cf_email__" data-cfemail="1b767a69785b76766f7d72757275686e697a75787e35787476">[email&#160;protected]</span></a>
+                        <a href="mailto:marc@mmtfininsurance.com">marc@mmtfininsurance.com</a>
                     </div>
                 </div>
                 <div class="contact-links">
                     <div class="contact-link-item">
                         <strong>Marylene Teopengco-Merritt, RVP</strong> | 
                         <a href="tel:+16315791904">1-631-579-1904</a> | 
-                        <a href="/cdn-cgi/l/email-protection#c0ada1b2b9aca5aea580adadb4a6a9aea9aeb3b5b2a1aea3a5eea3afad"><span class="__cf_email__" data-cfemail="adc0ccdfd4c1c8c3c8edc0c0d9cbc4c3c4c3ded8dfccc3cec883cec2c0">[email&#160;protected]</span></a>
+                        <a href="mailto:marylene@mmtfininsurance.com">marylene@mmtfininsurance.com</a>
                     </div>
                 </div>
                 <p style="margin-top: 12px; font-size: 0.85em;">Freedom Equity Group | NY Lic LA-1010090 & LA-1298496 | Licensed NY/NJ/AZ</p>
@@ -786,12 +786,12 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <strong>Marc Merritt</strong><br>
-                        <a href="/cdn-cgi/l/email-protection#640905160724090910020d0a0d0a171116050a07014a070b09"><span class="__cf_email__" data-cfemail="741915061734191900121d1a1d1a070106151a17115a171b19">[email&#160;protected]</span></a> | 
+                        <a href="mailto:marc@mmtfininsurance.com">marc@mmtfininsurance.com</a> | 
                         <a href="tel:+16466452453">1-646-645-2453</a>
                     </div>
                     <div class="contact-item">
                         <strong>Marylene Merritt</strong><br>
-                        <a href="/cdn-cgi/l/email-protection#bfd2decdc6d3dad1daffd2d2cbd9d6d1d6d1cccacdded1dcda91dcd0d2"><span class="__cf_email__" data-cfemail="e38e82919a8f868d86a38e8e97858a8d8a8d909691828d8086cd808c8e">[email&#160;protected]</span></a> | 
+                        <a href="mailto:marylene@mmtfininsurance.com">marylene@mmtfininsurance.com</a> | 
                         <a href="tel:+16315791904">1-631-579-1904</a>
                     </div>
                 </div>
@@ -810,8 +810,8 @@
                 <a href="tel:+16315791904">Marylene: 1-631-579-1904</a>
             </p>
             <p>
-                <a href="/cdn-cgi/l/email-protection#d8b5b9aabb98b5b5acbeb1b6b1b6abadaab9b6bbbdf6bbb7b5"><span class="__cf_email__" data-cfemail="553834273615383821333c3b3c3b262027343b36307b363a38">[email&#160;protected]</span></a> | 
-                <a href="/cdn-cgi/l/email-protection#80ede1f2f9ece5eee5c0ededf4e6e9eee9eef3f5f2e1eee3e5aee3efed"><span class="__cf_email__" data-cfemail="d0bdb1a2a9bcb5beb590bdbda4b6b9beb9bea3a5a2b1beb3b5feb3bfbd">[email&#160;protected]</span></a>
+                <a href="mailto:marc@mmtfininsurance.com">marc@mmtfininsurance.com</a> | 
+                <a href="mailto:marylene@mmtfininsurance.com">marylene@mmtfininsurance.com</a>
             </p>
             <p style="font-size: 0.85em; margin-top: 10px;">
                 NY Licenses: LA-1010090 & LA-1298496 | Licensed NY/NJ/AZ | Nationwide Appointments Pending
