--- a/index.html
+++ b/index.html
@@ -627,14 +627,14 @@
                     <div class="contact-link-item">
                         <strong>Marc Merritt, RVP</strong> | 
                         <a href="tel:+16466452453">1-646-645-2453</a> | 
-                        <a href="/cdn-cgi/l/email-protection#2e434f5c4d6e43435a48474047405d5b5c4f404d4b004d4143"><span class="__cf_email__" data-cfemail="d4b9b5a6b794b9b9a0b2bdbabdbaa7a1a6b5bab7b1fab7bbb9">[email&#160;protected]</span></a>
+                        <a href="mailto:marc@mmtfininsurance.com">marc@mmtfininsurance.com</a>
                     </div>
                 </div>
                 <div class="contact-links">
                     <div class="contact-link-item">
                         <strong>Marylene Teopengco-Merritt, RVP</strong> | 
                         <a href="tel:+16315791904">1-631-579-1904</a> | 
-                        <a href="/cdn-cgi/l/email-protection#b5d8d4c7ccd9d0dbd0f5d8d8c1d3dcdbdcdbc6c0c7d4dbd6d09bd6dad8"><span class="__cf_email__" data-cfemail="8be6eaf9f2e7eee5eecbe6e6ffede2e5e2e5f8fef9eae5e8eea5e8e4e6">[email&#160;protected]</span></a>
+                        <a href="mailto:marylene@mmtfininsurance.com">marylene@mmtfininsurance.com</a>
                     </div>
                 </div>
                 <p style="margin-top: 12px; font-size: 0.85em;">Freedom Equity Group | NY Lic LA-1010090 & LA-1298496 | Licensed NY/NJ/AZ</p>
@@ -786,12 +786,12 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <strong>Marc Merritt</strong><br>
-                        <a href="/cdn-cgi/l/email-protection#2d404c5f4e6d4040594b444344435e585f4c434e48034e4240"><span class="__cf_email__" data-cfemail="355854475675585841535c5b5c5b464047545b56501b565a58">[email&#160;protected]</span></a> | 
+                        <a href="mailto:marc@mmtfininsurance.com">marc@mmtfininsurance.com</a> | 
                         <a href="tel:+16466452453">1-646-645-2453</a>
                     </div>
                     <div class="contact-item">
                         <strong>Marylene Merritt</strong><br>
-                        <a href="/cdn-cgi/l/email-protection#274a46555e4b424942674a4a53414e494e49545255464944420944484a"><span class="__cf_email__" data-cfemail="365b57444f5a535853765b5b42505f585f58454344575855531855595b">[email&#160;protected]</span></a> | 
+                        <a href="mailto:marylene@mmtfininsurance.com">marylene@mmtfininsurance.com</a> | 
                         <a href="tel:+16315791904">1-631-579-1904</a>
                     </div>
                 </div>
